--- a/src/main/resources/ModifierProduit.fxml
+++ b/src/main/resources/ModifierProduit.fxml
@@ -67,6 +67,14 @@
                              -fx-border-radius: 10px; -fx-padding: 10px;
                              -fx-border-color: white; -fx-text-fill: white;"
                       GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+            <Label text="📷 Image :" textFill="white" GridPane.rowIndex="6" GridPane.columnIndex="0" />
+            <ImageView fx:id="produitImage" fitHeight="120" fitWidth="180" preserveRatio="true"
+                       GridPane.rowIndex="6" GridPane.columnIndex="1" />
+            <Button text="📂 Choisir Image" onAction="#choisirImage"
+                    style="-fx-background-color: #3498db; -fx-text-fill: white;
+               -fx-border-radius: 12px; -fx-padding: 10px 18px;"
+                    GridPane.rowIndex="7" GridPane.columnIndex="1" />
+
         </GridPane>
 
         <!-- 🟢🔴 Boutons d'action -->
