event add form and ui enhancement with date as date picker

--- a/templates/event/show.html.twig
+++ b/templates/event/show.html.twig
@@ -3,6 +3,17 @@
 {% block title %}Event{% endblock %}
 
 {% block body %}
+<div class="page-heading header-text">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <span class="breadcrumb"><a href="#">Acceuil</a> / Évènements</span>
+          <h3>Évènements</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  
     <h1>Event</h1>
 
     <table class="table">
