--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -5,7 +5,7 @@
             <div class="col-12">
                 <nav class="main-nav">
                     <!-- ***** Logo Start ***** -->
-                    <a href="index.html" class="logo">
+                    <a href="{{ path('app_home') }}" class="logo">
                         <h1>LAMMA</h1>
                     </a>
                     <!-- ***** Logo End ***** -->
