--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -19,7 +19,7 @@
     <div class="row properties-box">
       <div class="col-lg-12">
         <fieldset>
-          <button type="submit" id="form-submit" class="orange-button">Send Message</button>
+          <button  class="orange-button">Send Message</button>
         </fieldset>
       </div>
       {% for event in events %}
