--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,8 +8,7 @@
 
 
 
-        
-        <script src="{{ asset('assets/js/jquery.min.js') }}"></script>
+        <script src="{{ asset('assets/jquery/jquery.min.js') }}"></script>
         <script src="{{ asset('assets/js/bootstrap.min.js') }}"></script>
 
         <script src="{{ asset('assets/js/isotope.min.js') }}"></script>
