billet display, banner

--- a/templates/billet/index.html.twig
+++ b/templates/billet/index.html.twig
@@ -3,6 +3,17 @@
 {% block title %}Billet index{% endblock %}
 
 {% block body %}
+<div class="page-heading header-text">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <span class="breadcrumb"><a href="#">Accueil</a> / Billets</span>
+          <h3>Billets</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+
     <h1>Billet index</h1>
 
     <table class="table">
