--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -13,7 +13,7 @@
                     <ul class="nav">
                       <li><a href="{{ path('app_home') }}" class="active">Acceuil</a></li>
                       <li><a href="{{ path('app_event_index') }}">Évènements</a></li>
-                      <li><a href="property-details.html">Property Details</a></li>
+                      <li><a href="{{ path('app_billet_index') }}">Billets</a></li>
                       <li><a href="contact.html">Contact Us</a></li>
                       <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
                   </ul>   
