--- a/templates/event/index.html.twig
+++ b/templates/event/index.html.twig
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <span class="breadcrumb"><a href="#">Acceuil</a> / Évènements</span>
+        <span class="breadcrumb"><a href="#">Accueil</a> / Évènements</span>
         <h3>Évènements</h3>
       </div>
     </div>
@@ -16,12 +16,18 @@
 
 <div class="section properties">
   <div class="container">
-    <div class="row properties-box">
-      <div class="col-lg-12">
-        <fieldset>
-          <button  class="orange-button">Send Message</button>
-        </fieldset>
+  
+    {# Bouton Send Message #}
+    <div class="row mb-4">
+      <div class="col-lg-12 text-center">
+        <a href="#contact-form" class="main-button custom-message-btn">
+          <i></i> Créer évènement
+        </a>
       </div>
+    </div>
+    
+
+    <div class="row properties-box">
       {% for event in events %}
         <div class="col-lg-4 col-md-6 align-self-center mb-30 properties-items">
           <div class="item">
@@ -41,7 +47,7 @@
               <li>Visitors: <span>{{ event.nbrVisiteurs }}</span></li>
             </ul>
             <div class="main-button">
-              <a href="{{ path('app_event_show', {'idEvent': event.idEvent}) }}">Schedule a visit</a>
+              <a href="{{ path('app_event_show', {'idEvent': event.idEvent}) }}">Détails</a>
             </div>
           </div>
         </div>
