--- a/templates/event/new.html.twig
+++ b/templates/event/new.html.twig
@@ -15,43 +15,57 @@
           <div class="mb-3">
             {{ form_label(form.nomEvent, null, {'label_attr': {'class': 'form-label'}}) }}
             {{ form_widget(form.nomEvent, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.nomEvent) }}
+            <div class="text-danger mt-1" style="font-size: 0.95rem;">
+              {{ form_errors(form.nomEvent) }}
+            </div>
           </div>
 
           <div class="mb-3">
             {{ form_label(form.prix) }}
             {{ form_widget(form.prix, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.prix) }}
+            <div class="text-danger mt-1" style="font-size: 0.95rem;">
+              {{ form_errors(form.prix) }}
+            </div>
           </div>
 
           <div class="mb-3">
             {{ form_label(form.details) }}
             {{ form_widget(form.details, {'attr': {'class': 'form-control', 'rows': '3'}}) }}
-            {{ form_errors(form.details) }}
+            <div class="text-danger mt-1" style="font-size: 0.95rem;">
+              {{ form_errors(form.details) }}
+            </div>
           </div>
 
           <div class="mb-3">
             {{ form_label(form.date) }}
             {{ form_widget(form.date, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.date) }}
+            <div class="text-danger mt-1" style="font-size: 0.95rem;">
+              {{ form_errors(form.date) }}
+            </div>
           </div>
 
           <div class="mb-3">
             {{ form_label(form.nbrVisiteurs) }}
             {{ form_widget(form.nbrVisiteurs, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.nbrVisiteurs) }}
+            <div class="text-danger mt-1" style="font-size: 0.95rem;">
+              {{ form_errors(form.nbrVisiteurs) }}
+            </div>
           </div>
 
           <div class="mb-3">
             {{ form_label(form.nomEspace) }}
             {{ form_widget(form.nomEspace, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.nomEspace) }}
+            <div class="text-danger mt-1" style="font-size: 0.95rem;">
+              {{ form_errors(form.nomEspace) }}
+            </div>
           </div>
 
           <div class="mb-3">
             {{ form_label(form.image) }}
             {{ form_widget(form.image, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.image) }}
+            <div class="text-danger mt-1" style="font-size: 0.95rem;">
+              {{ form_errors(form.image) }}
+            </div>
           </div>
 
           <div class="text-center">
