--- a/templates/billet/new.html.twig
+++ b/templates/billet/new.html.twig
@@ -10,30 +10,38 @@
         <div class="card-body p-5">
           <h2 class="mb-4 text-center">Create a New Billet</h2>
 
-          {{ form_start(form, {'attr': {'class': 'needs-validation'}}) }}
+          {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
 
           <div class="mb-3">
             {{ form_label(form.proprietaire) }}
             {{ form_widget(form.proprietaire, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.proprietaire) }}
+            <div class="text-danger mt-1" style="font-size: 0.95rem;">
+              {{ form_errors(form.proprietaire) }}
+            </div>
           </div>
 
           <div class="mb-3">
             {{ form_label(form.prix) }}
             {{ form_widget(form.prix, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.prix) }}
+            <div class="text-danger mt-1" style="font-size: 0.95rem;">
+              {{ form_errors(form.prix) }}
+            </div>
           </div>
 
           <div class="mb-3">
             {{ form_label(form.type) }}
             {{ form_widget(form.type, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.type) }}
+            <div class="text-danger mt-1" style="font-size: 0.95rem;">
+              {{ form_errors(form.type) }}
+            </div>
           </div>
 
           <div class="mb-3">
             {{ form_label(form.event) }}
             {{ form_widget(form.event, {'attr': {'class': 'form-control'}}) }}
-            {{ form_errors(form.event) }}
+            <div class="text-danger mt-1" style="font-size: 0.95rem;">
+              {{ form_errors(form.event) }}
+            </div>
           </div>
 
           <div class="text-center">
