--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,78 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+  <head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'><text y='1.2em' font-size='96'>⚫️</text><text y='1.3em' x='0.2em' font-size='76' fill='#fff'>sf</text></svg>">
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+    {% block stylesheets %}
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="{{ asset('assets/css/fontawesome.css') }}">
+      <link rel="stylesheet" href="{{ asset('assets/css/templatemo-villa-agency.css') }}">
+      <link rel="stylesheet" href="{{ asset('assets/css/owl.css') }}">
+      <link rel="stylesheet" href="{{ asset('assets/css/animate.css') }}">
+      <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+    {% endblock %}
+  </head>
+  <body>
+    {% block subheader %}
+    <div class="sub-header">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-8">
+            <ul class="info">
+              <li><i class="fa fa-envelope"></i> info@company.com</li>
+              <li><i class="fa fa-map"></i> Sunny Isles Beach, FL 33160</li>
+            </ul>
+          </div>
+          <div class="col-lg-4 col-md-4">
+            <ul class="social-links">
+              <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+              <li><a href="https://x.com/minthu" target="_blank"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+              <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endblock %}
+
+    {% block banner %}
+    <div class="main-banner">
+      <div class="owl-carousel owl-banner">
+        <div class="item item-1">
+          <div class="header-text">
+            <span class="category">Toronto, <em>Canada</em></span>
+            <h2>Hurry!<br>Get the Best Villa for you</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endblock %}
+
+    {% block body %}{% endblock %}
+
+    {% block footer %}
+    <footer>
+      <div class="container">
+        <div class="col-lg-12">
+          <p>
+            Copyright © 2023 Villa Agency Co., Ltd. All rights reserved.
+            Design: <a rel="nofollow" href="https://templatemo.com" target="_blank">TemplateMo</a>
+          </p>
+        </div>
+      </div>
+    </footer>
+    {% endblock %}
+
+    {% block javascripts %}
+      <script src="{{ asset('vendor/jquery/jquery.min.js') }}"></script>
+      <script src="{{ asset('vendor/bootstrap/js/bootstrap.min.js') }}"></script>
+      <script src="{{ asset('assets/js/isotope.min.js') }}"></script>
+      <script src="{{ asset('assets/js/owl-carousel.js') }}"></script>
+      <script src="{{ asset('assets/js/counter.js') }}"></script>
+      <script src="{{ asset('assets/js/custom.js') }}"></script>
+    {% endblock %}
+  </body>
 </html>
