out of sync db bugfix

--- a/templates/billet/index.html.twig
+++ b/templates/billet/index.html.twig
@@ -7,7 +7,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <span class="breadcrumb"><a href="#">Accueil</a> / Billets</span>
+          <span class="breadcrumb"><a href="{{path('app_home')}}">Accueil</a> / Billets</span>
           <h3>Billets</h3>
         </div>
       </div>
