--- a/templates/espace/index.html.twig
+++ b/templates/espace/index.html.twig
@@ -1,47 +1,58 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Espace index{% endblock %}
+{% block title %}Espaces{% endblock %}
 
 {% block body %}
-    <h1>Espace index</h1>
+<div class="page-heading header-text">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <span class="breadcrumb"><a href="{{ path('app_home') }}">Accueil</a> / Espaces</span>
+        <h3>Espaces</h3>
+      </div>
+    </div>
+  </div>
+</div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>IdEspace</th>
-                <th>NomEspace</th>
-                <th>Adresse</th>
-                <th>Capacite</th>
-                <th>Disponibilite</th>
-                <th>Prix</th>
-                <th>Type_espace</th>
-                <th>Image</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for espace in espaces %}
-            <tr>
-                <td>{{ espace.idEspace }}</td>
-                <td>{{ espace.nomEspace }}</td>
-                <td>{{ espace.adresse }}</td>
-                <td>{{ espace.capacite }}</td>
-                <td>{{ espace.disponibilite }}</td>
-                <td>{{ espace.prix }}</td>
-                <td>{{ espace.TypeEspace }}</td>
-                <td>{{ espace.image }}</td>
-                <td>
-                    <a href="{{ path('app_espace_show', {'idEspace': espace.idEspace}) }}">show</a>
-                    <a href="{{ path('app_espace_edit', {'idEspace': espace.idEspace}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="9">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+<div class="section properties">
+  <div class="container">
 
-    <a href="{{ path('app_espace_new') }}">Create new</a>
+    <div class="row mb-4">
+      <div class="col-lg-12 text-center">
+        <a href="{{ path('app_espace_new') }}" class="main-button custom-message-btn">
+          <i></i> Créer un espace
+        </a>
+      </div>
+    </div>
+
+    <div class="row properties-box">
+      {% for espace in espaces %}
+        <div class="col-lg-4 col-md-6 align-self-center mb-30 properties-items">
+          <div class="item">
+            <a href="{{ path('app_espace_show', {'idEspace': espace.idEspace}) }}">
+              <img src="{{ asset('uploads/images/' ~ espace.image) }}" alt="">
+            </a>
+            <span class="category">{{ espace.Type_espace }}</span>
+            <h6>{{ espace.prix }} Dt</h6>
+            <h4>
+              <a href="{{ path('app_espace_show', {'idEspace': espace.idEspace}) }}">
+                {{ espace.nomEspace }}
+              </a>
+            </h4>
+            <ul>
+              <li>Adresse: <span>{{ espace.adresse }}</span></li>
+              <li>Capacité: <span>{{ espace.capacite }}</span></li>
+              <li>Disponibilité: <span>{{ espace.disponibilite }}</span></li>
+            </ul>
+            <div class="main-button">
+              <a href="{{ path('app_espace_show', {'idEspace': espace.idEspace}) }}">Détails</a>
+            </div>
+          </div>
+        </div>
+      {% else %}
+        <p>Aucun espace trouvé.</p>
+      {% endfor %}
+    </div>
+  </div>
+</div>
 {% endblock %}
