--- a/templates/partialsBack/sidebar.html.twig
+++ b/templates/partialsBack/sidebar.html.twig
@@ -36,7 +36,7 @@
             <ul class="vertical-nav-menu">
                 <li class="app-sidebar__heading">Dashboards</li>
                 <li>
-                    <a href="index.html" class="mm-active">
+                    <a href="{{ path('app_dashboard') }}" class="mm-active">
                         <i class="metismenu-icon pe-7s-rocket"></i>
                         Dashboard Example 1
                     </a>
@@ -180,6 +180,29 @@
                         Tables
                     </a>
                 </li>
+                <li class="app-sidebar__heading">Évènements</li>
+                <li>
+                <a href="#">
+                    <i class="metismenu-icon pe-7s-date"></i>
+                    Gestion Évènements
+                    <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
+                </a>
+                <ul>
+                    <li>
+                    <a href="{{ path('dashboard_event_index') }}">
+                        <i class="metismenu-icon"></i>
+                        Liste des Évènements
+                    </a>
+                    </li>
+                    <li>
+                    <a href="{{ path('dashboard_event_new') }}">
+                        <i class="metismenu-icon"></i>
+                        Ajouter un Évènement
+                    </a>
+                    </li>
+                </ul>
+                </li>
+
                 <li class="app-sidebar__heading">Billets</li>
                 <li>
                     <a href="#">
